--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -9,7 +9,7 @@ datadir     = @datadir@
 VERSION     = @PACKAGE_VERSION@
 CC          = @CC@
 INSTALL     = @INSTALL@
-CFLAGS      = @CFLAGS@ @X_CFLAGS@ @DEFS@
+CFLAGS      = @CFLAGS@ @X_CFLAGS@ @DEFS@ -DNON_ZAURUS
 LDFLAGS     = @LDFLAGS@ @LIBS@ @X_LIBS@ @X_EXTRA_LIBS@
 STRIP       = @STRIP@
 
