Reworked all message printouts:
* All messages are written to stderr. No need to flush stderr, since it's unbuffered by default. 

* Trailing newlines are appended at the end of the text. 

* Debug printouts are enabled with the "d" option and provided via the new DEBUG macro. 

* fflush() in fonts.c has been removed; not necessary.

--- a/Makefile.in
+++ b/Makefile.in
@@ -130,6 +130,7 @@ mycanscan-$(VERSION).tgz:
     mycanscan-$(VERSION)/canvis/main.c \
     mycanscan-$(VERSION)/canvis/main.h \
     mycanscan-$(VERSION)/graphcan/graphcan.c \
+    mycanscan-$(VERSION)/graphcan/graphcan.h \
     mycanscan-$(VERSION)/graphcan/fonts.c \
     mycanscan-$(VERSION)/graphcan/fonts.h \
     mycanscan-$(VERSION)/graphcan/images.c \
